--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '3'
 services:
-  tagall_bot:
-    container_name: tagall_bot
+  katanataggerbot:
+    container_name: katanataggerbot
     build: ./
     # or build this image, push to dockerhub.com and set
     # image: ......
     restart: unless-stopped
     environment:
-      - token=     # bot token
-      - owner_id=  # your id
+      - token=     # 6256855944:AAEvfoexkpJ_Y0tPkwdEP2JYW1uza-SSudQ
+      - owner_id=  # 5622660844
